# Tensor-Class

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Tensor.sln
.github/workflows/: codeql-analysis.yml
CUDAInclude/: TensorCuda.cuh  TensorCuda.ipp  TensorCudaBones.cuh  TensorOperatorKernels.cuh
PerlinNoise/: PerlinNoise.vcxproj  PerlinNoise.vcxproj.filters  TensorPerlin.cpp  TensorPerlin.h
StaticTensor/: CMakeLists.txt
StaticTensor/include/: StaticTensor.h  StaticTensor.ipp
StaticTensor/src/: StaticTensor.cpp
Tensor/: CMakeLists.txt  TSlib.h  Tensor.vcxproj  Tensor.vcxproj.filters  main.cpp
Tensor/include/: PerlinKernel.cuh  SaveSequence.h  SaveSequence.ipp  TSliceWrapper.h  Tensor.h  Tensor.ipp  TensorArithmetic.h  TensorArithmeticOperators.ipp  TensorBase.h  TensorBool.h  TensorBool.ipp  TensorEnums.h  TensorExceptions.h  TensorMath.ipp  TensorSlice.h  TensorSlice.ipp  TensorTools.h  TensorTools.ipp
Tensor/src/: PerlinNoise.cpp  TSliceWrapper.cpp  Tensor.cpp  TensorBool.cpp  main.cpp  mainCUDA.cpp
TensorCuda/: CMakeLists.txt  CUDA_PROFILE.json  TensorCuda.cpp  TensorCuda.vcxproj  TensorCuda.vcxproj.filters
TensorCuda/include/: TensorCuda.cuh  TensorCuda.ipp  TensorOperatorKernels.cuh
TensorCuda/src/: TensorCuda.cu
TensorMac/TensorMac/: main.cpp
TensorMac/TensorMac.xcodeproj/: project.pbxproj
TensorMac/TensorMac.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
TensorMac/TensorMac.xcodeproj/project.xcworkspace/xcuserdata/simonlevin.xcuserdatad/: UserInterfaceState.xcuserstate
TensorMac/TensorMac.xcodeproj/xcshareddata/xcschemes/: TensorMac.xcscheme
TensorMac/TensorMac.xcodeproj/xcuserdata/simonlevin.xcuserdatad/xcschemes/: xcschememanagement.plist
TensorOpencv/: TensorOpencv.cpp  TensorOpencv.h  TensorOpencv.vcxproj  TensorOpencv.vcxproj.filters
include/: PerlinNoise.h  TSliceWrapper.h  Tensor.h  Tensor.ipp  TensorArithmetic.h  TensorArithmeticOperators.h  TensorArithmeticOperators.ipp  TensorBones.h  TensorCompareOperators.h  TensorCuda.cuh  TensorCudaBones.cuh  TensorEnums.h  TensorExceptions.h  TensorMath.h  TensorMath.ipp  TensorOperatorKernels.cuh  TensorOperators.h  TensorSlice.h  TensorSlice.ipp  TensorSliceBones.h  TensorTools.h  TensorTools.ipp  TensorToolsBones.h
lib/: Tensor_Win32_Debug.lib  Tensor_Win32_Release.lib  Tensor_x64_Debug.lib  Tensor_x64_Release.lib
lib/CUDA/: TensorCuda_x64_Debug.lib  TensorCuda_x64_Release.lib
modules/PerlinNoise/: CMakeLists.txt
modules/PerlinNoise/include/: TensorPerlin.h  TensorPerlin.ipp
modules/PerlinNoise/src/: TensorPerlin.cpp
modules/TensorOpenCV/: CmakeLists.txt
modules/TensorOpenCV/include/: TensorOpenCV.h  TensorOpenCV.ipp
modules/TensorOpenCV/src/: TensorOpenCV.cpp
src/: TSliceWrapper.cpp  Tensor.cpp  TensorCuda.cu
